2006-06-09  Jeroen Frijters  <jeroen@frijters.net>

	* sun/reflect/annotation/AnnotationInvocationHandler.java:
	New file.

2006-06-08  Tom Tromey  <tromey@redhat.com>

	* java/text/Bidi.java (resolveNeutralTypes): Set j'th slot
	of 'types'.

2006-06-09  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/management/RuntimeMXBean.java:
	New file.
	
2006-06-08  Lillian Angel  <langel@redhat.com>

	* native/plugin/gcjwebplugin.cc:
	(NP_Shutdown): Freed whitelist_filename.

2006-06-08  Lillian Angel  <langel@redhat.com>

	* native/plugin/Makefile.am:
	Removed DATA_DIRECTORY.
	* native/plugin/gcjwebplugin.cc:
	Added new global fields for whitelist_file
	and data_directory. Removed WHITELIST_FILE.
	(NP_Initialize): Initialized new fields. Also,
	Changed to use new fields.
	(NP_Shutdown): Freed data_directory.
	(GCJ_New): Changed to use new fields.
	(plugin_ask_user_about_documentbase): Likewise.

2006-06-08  Lillian Angel  <langel@redhat.com>

	* native/plugin/Makefile.am:
	Changed DATA_DIRECTORY to be ~/.gcjwebplugin.
	* native/plugin/gcjwebplugin.cc:
	Changed all instances of PLUGIN_DATA_DIRECTORY
	to DATA_DIRECTORY.

2006-06-08  Roman Kennke  <kennke@aicas.com>

	* java/awt/LightweightDispatcher.java
	(handleMouseEvent): Replaced calls to AWTUtilities.convertPoint()
	with convertPointToChild(). This is more efficient and avoids
	problems with getLocationOnScreen().
	(findTarget): Check for component beeing showing() early.
	Simplified AWTUtilities.convertPoint() to a simple substraction
	operation.
	(convertPointToChild): New helper method.

2006-06-08  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* native/plugin/gcjwebplugin.cc (SECURITY_DESCRIPTION): Update
	message.

2006-06-08  Tom Fitzsimmons  <fitzsim@redhat.com>
	    Lillian Angel  <langel@redhat.com>

	* native/plugin/gcjwebplugin.cc
	(NP_Shutdown): Added code to free plugin mutex and whitelist file.
	Also, reset initialized field.

2006-06-08  Lillian Angel  <langel@redhat.com>
